--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -966,6 +966,11 @@ span.sb-caret { /* Caret Down */
 	#hero p ,footer .copy,.center-me,#statement,.return-top,.summary{
 		display: none!important;
 	}
+	.duoshuo,.pagination,.nogutter{
+		width:100%!important;
+		text-align: center;
+		margin:0 auto;
+	}
 }
 @media (max-width:500px) {
 	#toc{
