add search-bar & optimize mobile device view

--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -26,7 +26,7 @@
                     </span>
                 </p>
                 <p style="margin:0">
-                    Powered by Hexo and theme By <a href="https://github.com/yangzj1992/TKL" style="color: #767D84">Kieran</a>
+                    Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> and theme By <a href="https://github.com/yangzj1992/TKL">Kieran</a>
                 </p>
                 
             </div>
@@ -46,7 +46,17 @@
                     <li><a href="http://www.zhihu.com/people/yangzj1992" title="Zhihu" target="_blank"><i class="icon-CN_zhihu"></i></a>&nbsp;</li>
                     <% } %>
                 </ul>
+                <div class="search">
+                    <form id="searchform" onsubmit="return dispatch()">
+                      <div class="search_text">
+                        <i class="demo-icon icon-search">&#xe816;</i>
+                        <input type="text" name="q" id="searchbox"value="" placeholder="">
+                      </div>
+                    </form>
+                </div>
             </div>
+
+            
             
             <div class="clearfix"> </div>
         </div>
