--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -613,7 +613,7 @@ nav i.icon-basic-eye {
 .navbar-inner.lightnav-alt {
     background-color: rgba(255,255,255,.9)
 }
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
 	.navbar-inner.lightnav-alt {
 		border-bottom: none;
 	}
@@ -631,7 +631,7 @@ nav i.icon-basic-eye {
 .navbar .nav > li > a:active {
 	color:#777;
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1023px) {
 	.logo img:hover {
 		top:0px;
 		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -925,11 +925,6 @@ span.sb-caret { /* Caret Down */
 		font-weight: 400;
 	}
 }
-@media (max-width:991px) {
-	.title-emphasis {
-		text-align: left;
-	}
-}
 
 /* *******************************************************
 * Full-height hero section, (homepage, above the fold,)
@@ -951,7 +946,7 @@ span.sb-caret { /* Caret Down */
 		display: inline-block;
 	}
 }
-@media (max-width:1024px) {
+@media (max-width:767px) {
 	#hero {
 		position: relative;
 		.element-img{
@@ -971,6 +966,26 @@ span.sb-caret { /* Caret Down */
 		text-align: center;
 		margin:0 auto;
 	}
+	.social{
+		width: 100%;
+		ul{
+			float:right;
+		}
+		.search{
+			float: left;
+			width:36%;
+			position: absolute;
+			bottom: 10px;
+			#searchform{
+				margin-top:0!important;
+			}
+			#searchbox{
+				width: 100%;
+			}
+		}
+
+	}
+
 }
 @media (max-width:500px) {
 	#toc{
@@ -1047,17 +1062,6 @@ a.flex-next {
 .flex-direction-nav a.flex-prev:before {
 	display: none;
 	visibility: hidden;
-}
-.flex-caption {
-	position: absolute;
-	margin: auto;
-	left: 0;
-	bottom: 0;
-}
-@media (max-width:650px) {
-	.flex-caption {
-		display: none
-	}
 }
 .flex-caption h4 {
 	background-color: $NormalBlack;
@@ -1160,6 +1164,12 @@ footer {
 			font-size: 12px;
 			color: #767D84;
 		}
+		a{
+			color: #767D84;
+		}
+		a:hover{
+			color:$White;
+		}
 	}
 	.social{
 		float: right;
@@ -1175,6 +1185,20 @@ footer {
 				font-size: 20px;
 				color: #ccc;
 				margin-right: 4px;
+			}
+		}
+		#searchform{
+			margin-top: 20px;
+			.icon-search{
+				color:$White;
+				margin-top:8px;
+			}
+			#searchbox{
+				height:30px;
+				background-color: $NormalBlack;
+				border:1px solid $NormalBlack;
+				padding: 0 10px 0px 18px;
+				border-bottom:1px solid gray;
 			}
 		}
 	}
@@ -1350,4 +1374,7 @@ footer {
 }
 .icon-Popular_G:hover{
 	color:$GoogleRed;
+}
+.icon-search{
+	position: absolute;
 }
