--- a/layout/casper/post.ejs
+++ b/layout/casper/post.ejs
@@ -4,7 +4,7 @@
         <div class="post-content">
             <div class="col-md-8 col-md-offset-2">
                 <div>
-                    <h1><%- post.title %></h1>
+                    <h1 class="article-title"><%- post.title %></h1>
                     <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" style="color:#969696;display: block;font-size: 13px;font-weight: 400;width: 100%;height: 30px;text-align: center;">
                         <%= date(post.date,'YYYY 年 MM 月 DD 日') %>
                     </time>
@@ -22,7 +22,7 @@
             <div class="clearfix"></div>
             <hr class="nogutter">
             <div class="summary">
-                <!-- <i class="demo-icon icon-file-code">&#xe800;</i> <span class="i-name"></span> -->
+                <a class="code-article" target="_blank"><i class="demo-icon icon-file-code">&#xe800;</i><span class="i-name">源码</span></a>
                 <i class="demo-icon icon-file-word">&#xe802;</i><span class="i-name"><%-wordcount(post.content)%>字</span>
                 <i class="demo-icon icon-tags">&#xe801;</i> <span class="i-name"></span>
                 <span class="post-meta">
@@ -65,6 +65,8 @@
         $("#qrcode").css('display','none');
         jQuery("#qrcode").html('');
     });
+    var titletext = $(".article-title").text()
+    $(".code-article").attr('href','https://github.com/yangzj1992/articles/blob/master/'+titletext+'.md');
     function utf16to8(str) {
         var out, i, len, c;
         out = "";
