--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -26,7 +26,7 @@
                     </span>
                 </p>
                 <p style="margin:0">
-                    Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> and theme By <a href="https://github.com/yangzj1992/TKL">Kieran</a>
+                    Powered by <a href="https://hexo.io/zh-cn/">Hexo</a> and theme By <a href="https://github.com/yangzj1992/TKL-REVISION">Kieran</a>
                 </p>
                 
             </div>
