--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1078,7 +1078,7 @@ footer {
     footer .social #searchform {
       margin-top: 20px; }
       footer .social #searchform .icon-search {
-        color: #FFFFFF;
+        color: #ccc;
         margin-top: 8px; }
       footer .social #searchform #searchbox {
         height: 30px;
