--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1190,7 +1190,7 @@ footer {
 		#searchform{
 			margin-top: 20px;
 			.icon-search{
-				color:$White;
+				color:#ccc;
 				margin-top:8px;
 			}
 			#searchbox{
