feat(view): change pic path

--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -2,11 +2,11 @@
     
     <div class="sb-slidebar sb-right sb-style-overlay sb-momentum-scrolling">
         <div class="sb-close" aria-label="Close Menu" aria-hidden="true">
-            <img src="http://7bv937.com1.z0.glb.clouddn.com/qcyoung/TKL/close.png" alt="Close"/>
+            <img src="http://qcyoung.qiniudn.com/qcyoung/TKL/close.png" alt="Close"/>
         </div>
         <div class="site-overview">
            <div class="site-author">
-               <img class="site-author-img" width="100px" height="100px" src="http://7bv937.com1.z0.glb.clouddn.com/qcyoung/avatar.jpg"></img>
+               <img class="site-author-img" width="100px" height="100px" src="http://qcyoung.qiniudn.com/qcyoung/avatar.jpg"></img>
                <div class="site-author-name"><%= config.author%></div>
            </div>
            <div class="sb-list">
@@ -50,7 +50,7 @@
 
       <div class="cc-license">
         <a href="http://creativecommons.org/licenses/by-nc/4.0">
-          <img src="http://7bv937.com1.z0.glb.clouddn.com/qcyoung/cc-by-nc.svg">
+          <img src="http://qcyoung.qiniudn.com/qcyoung/cc-by-nc.svg">
         </a>
       </div>
     </div>
