--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -184,7 +184,7 @@ h1 span {
 		text-transform: uppercase;
 		font-style: normal;
 		font-weight: 700;
-		font-size: 16px;
+		font-size: 20px;
 		line-height: 24px;
 		letter-spacing: 1px;
 		padding-left: 10px;
@@ -200,13 +200,13 @@ h1 span {
 		font-style: normal;
 		font-weight: 700;
 		line-height: 21px;
-		font-size: 14px;
+		font-size: 18px;
 		margin-top:14px;
 	}
 	h4 {
 		font-style: normal;
 		font-weight: 700;
-		font-size: 12px;
+		font-size: 16px;
 		line-height: 30px;
 		color: $NormalBlack;
 	}
@@ -1360,6 +1360,58 @@ pre{
 	// 	overflow-x:scroll;
 	// }
 } 
+
+.egg-tips{
+	width:860px;
+	padding:10px;
+	border:1px solid hsla(0,0%,0%,0.25);
+	border-radius: 5px;
+	box-shadow:0 0 18px rgba(0,0,0,0.4);
+	background-color: $White;
+	.egg-header{
+		border-bottom:1px solid #e5e5e5;
+		font-size: 18px;
+	}
+	.egg-close{
+		cursor: pointer;
+		float: right;
+		opacity: 0.25;
+		&:hover{
+			opacity: 1;
+		}
+	}
+	.egg-helps{
+		padding:15px 0;
+		table{
+			border:none;
+			tr{
+				border:none;
+			}
+			th{
+				color:#333;
+				line-height: 1.5;
+				border:none;
+				text-align: left;
+			}
+			td{
+				border:none;
+			}
+			kbd{
+				display: inline-block;
+				padding:3px 5px;
+				background-color: #fcfcfc;
+				margin-right: 2px;
+				color:#555;
+				line-height: 10px;
+				vertical-align: middle;
+				border: 1px solid #ccc;
+				border-bottom-color: #bbb;
+				border-radius: 3px;
+				box-shadow: inset 0 -1px 0 #bbb;
+			}
+		}
+	}
+}
 
 .icon-Popular_GitHub:hover{
 	color:#4078c0;
