feat: fix style & modify foot panel & add font icons

--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -1,10 +1,17 @@
 
 <!-- ============================ Footer =========================== -->
-<div class="return-top">
-    <a data-action:"return-top" data-tip="回到顶部" href="" class="btn-return-top"> 
-        <div class="arrow"></div>
-        <div class="stick"></div>
-    </a>
+<div class="control-panel">
+    <ul>
+        <li>
+            <i class="demo-icon icon-gotop">&#xe817;</i>
+        </li>
+        <li>
+            <i class="demo-icon icon-godown">&#xe802;</i>
+        </li>
+        <li>
+            <i class="demo-icon icon-music" style="display: none;">&#xe814;</i>
+        </li>
+    </ul>
 </div>
 <footer>
     <div class="footer">
