--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -2,7 +2,7 @@
     
     <div class="sb-slidebar sb-right sb-style-overlay sb-momentum-scrolling">
         <div class="sb-close" aria-label="Close Menu" aria-hidden="true">
-            <img src="http://qcyoung.qiniudn.com/qcyoung/TKL/close.png" alt="Close"/>
+          <i class="demo-icon icon-cancel-2">&#xe824;</i>
         </div>
         <div class="site-overview">
            <div class="site-author">
@@ -121,7 +121,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 vertical-align cover boost text-center">
                         <div class="center-me animateme" data-when="exit" data-from="0" data-to="0.6" data-opacity="0" data-translatey="100">
-                            <div>
+                            <div class="center-text">
                             	<% theme.top_saying.forEach(function(item){ %>
                                 <h2><%- item.title %></h2>
                                 <p><%- item.content %></p>
