--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -119,7 +119,7 @@ h2 {
 	text-transform: uppercase;
 	font-style: normal;
 	font-weight: 700;
-	font-size: 26px;
+	font-size: 24px;
 	line-height: 30px;
 	letter-spacing: 1px;
 }
@@ -253,7 +253,6 @@ a,a:active,a:focus,a:hover,a:visited,a:link {
 		}
 		a:hover{
 			color: $BlackGreen;
-			text-decoration: underline;
 		}
 	}
 }
@@ -306,6 +305,7 @@ blockquote footer {
  color:$White;
  background-color:$NormalBlack;
 }
+.clear{clear: both;}
 a, button,
 .sb-close img,
 form#mailinglistForm .btn-primary,
@@ -725,8 +725,9 @@ html.sb-init.sb-active.sb-active-right #projects .filter-item div a {
 .sb-close {
 	text-align: right;
 	cursor: pointer;
-	img{
-		padding: 10px 16px;
+	.icon-cancel-2{
+		color:#fff;
+		padding: 10px 20px;
 		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
 		-khtml-opacity: .6;
 		-moz-opacity: .6;
@@ -947,18 +948,16 @@ span.sb-caret { /* Caret Down */
 	}
 }
 @media (max-width:767px) {
+	.heightblock {
+		display: none;
+	}
 	#hero {
 		position: relative;
 		.element-img{
 			display: none;
 		}
 	}
-	.heightblock {
-		display: none;
-	}
-}
-@media (max-width:767px) {
-	#hero p ,footer .copy,.center-me,#statement,.return-top,.summary{
+	#hero p ,footer .copy,.center-me,#statement,.return-top,.summary,.control-panel{
 		display: none!important;
 	}
 	.duoshuo,.pagination,.nogutter{
@@ -983,9 +982,7 @@ span.sb-caret { /* Caret Down */
 				width: 100%;
 			}
 		}
-
 	}
-
 }
 @media (max-width:500px) {
 	#toc{
@@ -1281,6 +1278,21 @@ footer {
 .popPanel .popPanel-inner .qrcodePanel img{width:200px;height:200px;border:none;padding:10px 10px 5px 10px;}
 .popPanel .popPanel-inner .qrcodePanel p{font-size:12px;color:$DarkGrey;line-height:24px;letter-spacing:1px;}
 
+.control-panel{
+	display: block;
+	position: fixed;
+	z-index: 10;
+	bottom: 132px;
+	right:20px;
+	display: none;
+	ul{
+		li{
+			list-style: none;
+		}
+	}
+	
+
+}
 /*return-top*/
 .return-top{
 	opacity: 1;
@@ -1300,22 +1312,6 @@ footer {
 		position: relative;
 		&:hover{
 			opacity: 1;
-		}
-		.arrow{
-			width:0px;
-			height: 0px;
-			border:9px solid transparent;
-			border-bottom-color: #bbb;
-			margin:9px;
-		}
-		.stick{
-			width:8px;
-			height: 14px;
-			top:15px;
-			margin:0 14px;
-			background-color: #bbb;
-			position: absolute;
-			display: block;
 		}
 	}
 }
