feat: change control-panel style

--- a/layout/casper/footer.ejs
+++ b/layout/casper/footer.ejs
@@ -9,7 +9,7 @@
             <i class="demo-icon icon-godown">&#xe802;</i>
         </li>
         <li>
-            <i class="demo-icon icon-music" style="display: none;">&#xe814;</i>
+            <i class="demo-icon icon-music">&#xe814;</i>
         </li>
     </ul>
 </div>
