--- a/layout/casper/post.ejs
+++ b/layout/casper/post.ejs
@@ -23,7 +23,7 @@
             <hr class="nogutter">
             <div class="summary">
                 <a class="code-article" target="_blank"><i class="demo-icon icon-file-code">&#xe800;</i><span class="i-name">源码</span></a>
-                <i class="demo-icon icon-file-word">&#xe821;</i><span class="i-name"><%-wordcount(post.content)%>字</span>
+                <i class="demo-icon icon-file-word">&#xe821;</i><span class="i-name post-words"><%-wordcount(post.content)%>字</span>
                 <i class="demo-icon icon-tags">&#xe801;</i> <span class="i-name"></span>
                 <span class="post-meta">
                     <% if (post.tags && post.tags.length){ %>
