--- a/layout/casper/post.ejs
+++ b/layout/casper/post.ejs
@@ -2,7 +2,13 @@
 <section id="intro">
     <div class="container">
         <div class="post-content">
-            <div class="col-md-8 col-md-offset-2">
+            <% if (!post.toc){ %>
+                <div id="toc" class="toc-article col-md-2">
+                    <strong class="toc-title">目录</strong>
+                    <%- toc(post.content) %>
+                </div>
+            <% } %>
+            <div class="col-md-8 col-md-offset-3">
                 <div>
                     <h1 class="article-title"><%- post.title %></h1>
                     <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished" style="color:#969696;display: block;font-size: 13px;font-weight: 400;width: 100%;height: 30px;text-align: center;">
@@ -10,53 +16,47 @@
                     </time>
                 </div>
             </div>
-            <div class="col-md-8 col-md-offset-2">
-                <% if (!post.toc){ %>
-                    <div id="toc" class="toc-article">
-                        <strong class="toc-title">目录</strong>
-                        <%- toc(post.content) %>
-                    </div>
-                <% } %>
-                <%- post.content %>
+            <div class="col-md-8 col-md-offset-3">
+                <div class="post-article">
+                    <%- post.content %>
+                </div>
+                <div class="clearfix"></div>
+                <hr class="nogutter">
+                <div class="summary">
+                    <a class="code-article" target="_blank"><i class="demo-icon icon-file-code">&#xe800;</i><span class="i-name">源码</span></a>
+                    <i class="demo-icon icon-file-word">&#xe821;</i><span class="i-name post-words"><%-wordcount(post.content)%>字</span>
+                    <i class="demo-icon icon-tags">&#xe801;</i> <span class="i-name"></span>
+                    <span class="post-meta">
+                        <% if (post.tags && post.tags.length){ %>
+                            <% count = post.tags.length %>
+                            <% post.tags.forEach(function(tag, index) { %>
+                                <a class='post-tags' href='<%= config.root + tag.path %>'><%= tag.name %></a><% if (count !== index+1) { %><% } %>
+                            <% }); %>
+                        <% } %>
+                    </span>
+                    <i class="demo-icon icon-eye">&#xe803;</i> <span class="i-name"><span id="busuanzi_container_page_pv">
+                      <span id="busuanzi_value_page_pv"></span>次阅读
+                    </span></span>
+                    
+                    <span id="share" style="float: right;position: relative;">
+                        <div class="qrcode" id="qrcode" style="display: none;"></div>
+                        <a id="wechat" class="share-icon" title="分享到微信" data-wechat-url="<%=  site.url %><% page.url %>" href="javascript:void(0);"><i class="icon-CN_tencent_wechat"></i></a>
+                        <a id="weibo" class="share-icon" target="_blank" title="分享到微博" href="http://service.weibo.com/share/share.php?title=<%= page.title %> | <%= theme.title %> &amp;url=<%= theme.url %><%= url_for(path) %>&amp;type=3&amp;searchPic=false"><i class="icon-CN_sina_weibo"></i></a>
+                        <a id="qzone" class="share-icon" target="_blank" title="分享到 QQ 空间" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=<%= theme.url %><%= url_for(path) %>&amp;title=<%= page.title %> | <%= theme.title %>"><i class="icon-CN_tencent_qzone"></i></a>
+                        <a id="twitter" class="share-icon" target="_blank" title="Share to Twitter" href="https://twitter.com/intent/tweet?url=<%= theme.url %><%= url_for(path) %>&amp;text=<%= page.title %>;via=<%= theme.author %>| <%= theme.title %>"><i class="icon-Popular_Twitter"></i></a>
+                        <a id="facebook" class="share-icon" target="_blank" title="Share to Facebook" href="http://www.facebook.com/sharer.php?u=<%=  site.url %><% page.url %>&amp;t=<%= page.title %> | <%= theme.title %>"><i class="icon-Popular_Facebook"></i></a>
+                        <a id="gplus" class="share-icon" target="_blank" title="Share to Google+" href="https://plus.google.com/share?url=<%= theme.url %><%= url_for(path) %>"><i class="icon-Popular_G"></i></a>
+                    </span>
+                </div>
             </div>
-            <div class="clearfix"></div>
-            <hr class="nogutter">
-            <div class="summary">
-                <a class="code-article" target="_blank"><i class="demo-icon icon-file-code">&#xe800;</i><span class="i-name">源码</span></a>
-                <i class="demo-icon icon-file-word">&#xe821;</i><span class="i-name post-words"><%-wordcount(post.content)%>字</span>
-                <i class="demo-icon icon-tags">&#xe801;</i> <span class="i-name"></span>
-                <span class="post-meta">
-                    <% if (post.tags && post.tags.length){ %>
-                        <% count = post.tags.length %>
-                        <% post.tags.forEach(function(tag, index) { %>
-                            <a class='post-tags' href='<%= config.root + tag.path %>'><%= tag.name %></a><% if (count !== index+1) { %><% } %>
-                        <% }); %>
-                    <% } %>
-                </span>
-                <i class="demo-icon icon-eye">&#xe803;</i> <span class="i-name"><span id="busuanzi_container_page_pv">
-                  <span id="busuanzi_value_page_pv"></span>次阅读
-                </span></span>
-                
-               <span id="share" style="float: right;position: relative;">
-                    <div class="qrcode" id="qrcode" style="display: none;"></div>
-                    <a id="wechat" class="share-icon" title="分享到微信" data-wechat-url="<%=  site.url %><% page.url %>" href="javascript:void(0);"><i class="icon-CN_tencent_wechat"></i></a>
-                    <a id="weibo" class="share-icon" target="_blank" title="分享到微博" href="http://service.weibo.com/share/share.php?title=<%= page.title %> | <%= theme.title %> &amp;url=<%= theme.url %><%= url_for(path) %>&amp;type=3&amp;searchPic=false"><i class="icon-CN_sina_weibo"></i></a>
-                    <a id="qzone" class="share-icon" target="_blank" title="分享到 QQ 空间" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=<%= theme.url %><%= url_for(path) %>&amp;title=<%= page.title %> | <%= theme.title %>"><i class="icon-CN_tencent_qzone"></i></a>
-                    <a id="twitter" class="share-icon" target="_blank" title="Share to Twitter" href="https://twitter.com/intent/tweet?url=<%= theme.url %><%= url_for(path) %>&amp;text=<%= page.title %>;via=<%= theme.author %>| <%= theme.title %>"><i class="icon-Popular_Twitter"></i></a>
-                    <a id="facebook" class="share-icon" target="_blank" title="Share to Facebook" href="http://www.facebook.com/sharer.php?u=<%=  site.url %><% page.url %>&amp;t=<%= page.title %> | <%= theme.title %>"><i class="icon-Popular_Facebook"></i></a>
-                    <a id="gplus" class="share-icon" target="_blank" title="Share to Google+" href="https://plus.google.com/share?url=<%= theme.url %><%= url_for(path) %>"><i class="icon-Popular_G"></i></a>
-                </span>
-            </div>
+            <div style="clear:both;"></div>
+            <%- partial('post/navigation') %>
+            <div class="duoshuo"><%- partial('post/duoshuo') %></div>
         </div>
-        <%- partial('post/navigation') %>
-        <div class="duoshuo"><%- partial('post/duoshuo') %></div>
     </div>
 </section>
 <script src="/js/jquery.qrcode.min.js"></script>
 <script>
-    if($("#toc").width()>350){
-        $("#toc").css('width', '100%').after('<div class="clear"></div>')
-    }
     $("#wechat").hover(function() {
         $("#qrcode").css('display','inline-block');
         jQuery("#qrcode").qrcode({
