feat: post copyright & optimize scrollspy logic

--- a/layout/casper/post.ejs
+++ b/layout/casper/post.ejs
@@ -20,6 +20,7 @@
                 <div class="post-article">
                     <%- post.content %>
                 </div>
+                <p style="color:#969696;font-size: 13px;text-align: center;">本文版权归yangzj1992所有。商业转载请联系本人获得授权，非商业转载请注明出处。</p>
                 <div class="clearfix"></div>
                 <hr class="nogutter">
                 <div class="summary">
